MDEV-24341 reduce or eliminate waits for Innodb redo log group commit in foreground threads