sql/scheduler.h
@@ -40,6 +40,8 @@ struct scheduler_functions
   void (*thd_wait_end)(THD *thd);
   void (*post_kill_notification)(THD *thd);
   void (*end)(void);
+  /** resume previous unfinished command (threadpool only)*/
+  void (*thd_resume)(THD* thd);
 };
 
 
